fixed some scripting

--- a/src/AlgoVision/AlgoVision.css
+++ b/src/AlgoVision/AlgoVision.css
@@ -1,10 +1,10 @@
 .array-container {
     display: flex;
-    width: 90vw;
+    max-width: 95vw;
     height: 93vh;
     justify-content: center;
     align-items: flex-end;
-    padding-left: 5vw;
+    padding-left: 2.5vw;
 }
 
 .array-bar {
